--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="mydialogstyle"></style>
+    <style name="mydialogstyle" parent="Animation.AppCompat.Dialog">
+    </style>
 
 </resources>
