--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">@android:color/darker_gray</color>
     <color name="colorPrimaryDark">@android:color/holo_green_dark</color>
     <color name="colorAccent">@android:color/holo_green_light</color>
+
+
+    <color name="gainsboro">#DCDCDC</color>
+    <color name="cut_off_line">#22000000</color>
+
+    <color name="switch_thumb_material">#fff1f1f1</color>
+    <color name="switch_thumb_disabled">#ffbdbdbd</color>
 </resources>
