--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MVPDevelop.View.PermissionActivity">
+    tools:context=".mvp.view.PermissionActivity">
 
 </android.support.constraint.ConstraintLayout>
