--- a/welcome/src/main/res/layout/activity_second.xml
+++ b/welcome/src/main/res/layout/activity_second.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SecondActivity">
+    tools:context=".ui.second.SecondActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
