--- a/welcome/src/main/res/layout/activity_urlweb_two.xml
+++ b/welcome/src/main/res/layout/activity_urlweb_two.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".web.URLWebTwoActivity">
+    tools:context=".ui.web.URLWebTwoActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
