--- a/welcome/src/main/res/layout/fragment_one.xml
+++ b/welcome/src/main/res/layout/fragment_one.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.OneFragment"
+    tools:context=".ui.home.fragment.OneFragment"
     style="@style/AppTheme.Fragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
