--- a/welcome/src/main/res/values/styles.xml
+++ b/welcome/src/main/res/values/styles.xml
@@ -16,6 +16,29 @@
     <!--此属性会导致activity的退场动画失效-->
     <!--<item name="android:windowIsTranslucent">true</item>-->
 
+    <!--//沉浸式
+        window.setFlags(WindowManager.LayoutParams.FLAG_FULLSCREEN,WindowManager.LayoutParams.FLAG_FULLSCREEN);
+        window.decorView.systemUiVisibility = View.INVISIBLE
+        setSystemUiVisibility()和getSystemUiVisibility()方法实现对状态栏的动态显示或隐藏的操作，以及获取状态栏当前可见性。
+
+        setSystemUiVisibility()方法传入的实参分析：
+
+    1. View.SYSTEM_UI_FLAG_VISIBLE：显示状态栏，Activity不全屏显示(恢复到有状态的正常情况)。
+
+    2. View.INVISIBLE：隐藏状态栏，同时Activity会伸展全屏显示。
+
+    3. View.SYSTEM_UI_FLAG_FULLSCREEN：Activity全屏显示，且状态栏被隐藏覆盖掉。
+
+    4. View.SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN：Activity全屏显示，但状态栏不会被隐藏覆盖，状态栏依然可见，Activity顶端布局部分会被状态遮住。
+
+    5. View.SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION：效果同View.SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN
+
+    6. View.SYSTEM_UI_LAYOUT_FLAGS：效果同View.SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN
+
+    7. View.SYSTEM_UI_FLAG_HIDE_NAVIGATION：隐藏虚拟按键(导航栏)。有些手机会用虚拟按键来代替物理按键。
+
+    8. View.SYSTEM_UI_FLAG_LOW_PROFILE：状态栏显示处于低能显示状态(low profile模式)，状态栏上一些图标显示会被隐藏。
+-->
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
         <item name="windowActionBar">false</item>
@@ -39,7 +62,7 @@
     </style>
 
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <!--状态栏的高度-->
         <item name="actionBarSize">38dp</item>
     </style>
