--- a/welcome/src/main/res/layout/activity_second.xml
+++ b/welcome/src/main/res/layout/activity_second.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.second.SecondActivity">
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
