--- a/welcome/src/main/res/layout/home_activity.xml
+++ b/welcome/src/main/res/layout/home_activity.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/basePrimary"
+        android:background="@color/colorPrimary"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_home"
         app:insetForeground="@null"
