--- a/welcome/src/main/res/layout/home_drawer_text.xml
+++ b/welcome/src/main/res/layout/home_drawer_text.xml
@@ -9,6 +9,5 @@
         android:id="@+id/text_d"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="123"
-        android:background="@color/home_table_text_select"/>
+        android:text="123" />
 </LinearLayout>
