--- a/welcome/src/main/res/values/styles.xml
+++ b/welcome/src/main/res/values/styles.xml
@@ -10,6 +10,8 @@
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="android:windowAnimationStyle">@style/anim</item>
+
+        <item name="android:actionOverflowButtonStyle">@style/Menu</item>
     </style>
     <!--此属性导致状态栏颜色设置失效-->
     <!--<item name="android:windowFullscreen">true</item>-->
@@ -66,13 +68,6 @@
     </style>
 
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <!--状态栏的高度-->
-        <item name="actionBarSize">38dp</item>
-    </style>
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
     <!-- 界面切换动画 -->
     <style name="anim" parent="@android:style/Animation">
         <!--当我们从 A1 启动 A2 时，A1 从屏幕上消失，这个动画叫做 android:activityOpenExitAnimation
@@ -95,5 +90,35 @@
         <item name="android:activityOpenExitAnimation">@anim/slide_out_left</item>
         <item name="android:activityCloseEnterAnimation">@anim/slide_in_left</item>
         <item name="android:activityCloseExitAnimation">@anim/slide_out_right</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <!--状态栏的高度-->
+        <item name="actionBarSize">38dp</item>
+    </style>
+
+    <!--toolbar-->
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+        <!-- 是否覆盖锚点，默认为true，即盖住Toolbar -->
+        <item name="overlapAnchor">false</item>
+        <item name="android:dropDownWidth">wrap_content</item>
+        <item name="android:paddingRight">0dp</item>
+        <!-- 弹出层背景颜色 -->
+        <!--        <item name="android:popupBackground">@drawable/ic_menu_bg</item>-->
+        <!--<item name="android:background">@drawable/ic_menu_bg</item>-->
+        <!-- 弹出层垂直方向上的偏移，即在竖直方向上距离Toolbar的距离，值为负则会盖住Toolbar -->
+        <item name="android:dropDownVerticalOffset">-7dp</item>
+        <!-- 弹出层水平方向上的偏移，即距离屏幕左边的距离，负值会导致右边出现空隙 -->
+        <item name="android:dropDownHorizontalOffset">0dp</item>
+        <!-- 设置弹出菜单文字颜色 -->
+        <!--        <item name="android:textColor">#0099CC</item>-->
+        <item name="android:textSize">16sp</item>-->
+        <!--<item name="android:dropDownListViewStyle">@style/AppDropDownListViewStyle</item>-->
+        <!--        toolbar上的按钮名字样式-->
+        <!--        <item name="android:actionMenuTextAppearance">@style/MenuTextStyle</item>-->
+    </style>
+
+    <style name="Menu" parent="Widget.AppCompat.Light.ActionButton.Overflow">
+        <item name="android:src">@mipmap/c62_icon_plus</item>
     </style>
 </resources>
